Introducción Angular terminada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 
 @if (visible) {
   <h2>{{title}}</h2>
+  <div>Total: {{counter}}</div>
   @if (users != undefined && users.length > 0) {
     <table>
     <thead>
@@ -30,7 +31,7 @@
   <h2>Lo sentimos no está disponible la página</h2>
 }
 
-<app-counter [title]="subTitle">
+<app-counter [title]="subTitle" (counterEmmit)="setCounterParent($event)">
 
 </app-counter>
 
